<resources>
    <string name="app_name">AppTeam4</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrar</string>
    <string name="alert_contact_support">En caso de tener problemas comunicarse con soporte</string>
    <string name="refactoring_life_academy">Refactoring Life Academy</string>
    <string name="sing_up">Registrarse</string>
    <string name="email_register">Email</string>
    <string name="password_confirm">Confirmar Contraseña</string>
    <string name="password">Contraseña</string>
    <string name="enter">Entrar</string>
    <string name="showPasword">Mostrar Contraseña</string>
    <string name="accountMessage">Si ya tienes una cuenta,</string>
    <string name="loginMessage">inicie sesión aquí</string>
    <string name="hit_search_product">Busca en Refactoring Life Shop</string>
    <string name="alert1_support_home">En caso de problemas comunicate con</string>
    <string name="alert2_support_home">soporte</string>
    <string name="text_offer_day">Oferta del dia</string>
    <string name="log_in">Iniciar sesion</string>
    <string name="email">Email</string>
    <string name="account">Si no tienes una cuenta ,   </string>
    <string name="register_here">registrate aqui</string>
    <string name="example_title_products">title</string>
    <string name="example_price_products">$ price</string>
    <string name="example_category">Category</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
